--- a/.babelrc
+++ b/.babelrc
@@ -8,12 +8,7 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime",["component", [
-    {
-      "libraryName": "mint-ui",
-      "style": true
-    }
-  ]]],
+  "plugins": ["transform-vue-jsx", "transform-runtime"],
   "env": {
     "test": {
       "presets": ["env", "stage-2"]
